# EvolutiveSystemAnalyzer-ObstacleAvoidance

./: README.md
MatlabApp/: EvolutiveSysAnalyze.mlapp  batata.txt  firstTest.txt  temp.txt  test2.txt  test3.txt
obstacle_avoidance_simulation/: CMakeLists.txt  package.xml
obstacle_avoidance_simulation/launch/: main.launch  one_robot.launch  robots.launch
obstacle_avoidance_simulation/matlabMsg/matlab_gen/jar/: obstacle_avoidance_simulation-1.0.md5  turtlebot3_test_obst_avoid-1.0.md5
obstacle_avoidance_simulation/matlabMsg/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
obstacle_avoidance_simulation/matlabMsg/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+obstacle_avoidance_simulation/: ConfigGenes.m  ControlSimulation.m  EvolutiveSystemConfiguration.m  RobotInfo.m
obstacle_avoidance_simulation/matlabMsg/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+turtlebot3_test_obst_avoid/: ControlSimulation.m  EvolutiveSystemConfiguration.m  RobotInfo.m
obstacle_avoidance_simulation/matlabMsg/obstacle_avoidance_simulation/: package.xml
obstacle_avoidance_simulation/matlabMsg/obstacle_avoidance_simulation/msg/: ConfigGenes.msg  ControlSimulation.msg  EvolutiveSystemConfiguration.msg  RobotInfo.msg
obstacle_avoidance_simulation/msg/: ConfigGenes.msg  ControlSimulation.msg  EvolutiveSystemConfiguration.msg  RobotInfo.msg
obstacle_avoidance_simulation/src/: robot_obst_avoid.cpp
obstacle_avoidance_simulation/urdf/: robot.gazebo  robot.xacro
