<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance_simulation</name>
  <version>1.0.0</version>
  <description>Package to control the simulated robots in the Gazebo</description>
  <maintainer email="breno@todo.todo">breno</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
